--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^14.14.22",
     "@types/reflect-metadata": "^0.1.0",
     "ts-node": "^9.1.1",
+    "tstl": "^2.4.14",
     "ttypescript": "^1.5.12",
     "typescript": "^4.1.3"
   },
