--- a/tsconfig.json
+++ b/tsconfig.json
@@ -72,5 +72,6 @@
     /* Advanced Options */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "include": ["src", "api/structures"]
 }
