--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestia",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "Automatic SDK and Document generator for the NestJS",
   "main": "src/index.ts",
   "bin": {
@@ -32,6 +32,7 @@
     "@types/node": "^14.14.22",
     "@types/reflect-metadata": "^0.1.0",
     "cli": "^1.0.1",
+    "del": "^6.0.0",
     "ts-node": "^9.1.1",
     "tstl": "^2.4.14",
     "ttypescript": "^1.5.12",
