--- a/tsconfig.json
+++ b/tsconfig.json
@@ -73,5 +73,10 @@
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
-  // "include": ["src", "test"]
+  "include": [
+    "src",
+    "test/default/src",
+    "test/nestia.config.ts/src",
+    // "test/tsconfig.json/src"
+  ]
 }
