--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,6 +68,7 @@
     /* Experimental Options */
     "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
+    "stripInternal": true,
 
     /* Advanced Options */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
