--- a/package.json
+++ b/package.json
@@ -36,11 +36,10 @@
     "del": "^6.0.0",
     "ts-node": "^9.1.1",
     "tstl": "^2.5.0",
-    "ttypescript": "^1.5.12",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
-    "encrypted-nestjs": "^0.1.15",
+    "nestia-helper": "^1.0.0",
     "rimraf": "^3.0.2"
   }
 }
