--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestia",
-  "version": "2.0.4-dev.20220415-2",
+  "version": "2.0.4",
   "description": "Automatic SDK and Document generator for the NestJS",
   "main": "src/index.ts",
   "bin": {
@@ -35,7 +35,7 @@
     "cli": "^1.0.1",
     "del": "^6.0.0",
     "glob": "^7.2.0",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.7.0",
     "tstl": "^2.5.3",
     "ttypescript": "^1.5.13",
     "typescript": "^4.6.3",
