--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestia",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "description": "Automatic SDK and Document generator for the NestJS",
   "main": "src/index.ts",
   "bin": {
@@ -33,9 +33,10 @@
     "@types/node": "^17.0.23",
     "@types/reflect-metadata": "^0.1.0",
     "cli": "^1.0.1",
+    "comment-json": "^4.2.2",
     "del": "^6.0.0",
     "glob": "^7.2.0",
-    "ts-node": "^10.7.0",
+    "ts-node": "^9.1.1",
     "tstl": "^2.5.3",
     "ttypescript": "^1.5.13",
     "typescript": "^4.6.3",
