--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestia",
-  "version": "2.1.0-dev.20220501",
+  "version": "2.1.0-dev.20220503-3",
   "description": "Automatic SDK and Document generator for the NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -42,7 +42,7 @@
     "ttypescript": "^1.5.13",
     "typescript": "^4.6.3",
     "typescript-is": "^0.19.0",
-    "typescript-json": "^2.0.7",
+    "typescript-json": "^2.0.9-dev.20220503-3",
     "typescript-transform-paths": "^3.3.1"
   },
   "devDependencies": {
