--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestia",
-  "version": "2.1.0-dev.20220505",
+  "version": "2.1.0",
   "description": "Automatic SDK and Document generator for the NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -19,9 +19,10 @@
   "keywords": [
     "nestjs",
     "sdk",
-    "api",
+    "restapi",
     "document",
-    "swagger"
+    "swagger",
+    "generator"
   ],
   "author": "Jeongho Nam",
   "license": "MIT",
