--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestia",
-  "version": "3.0.4",
+  "version": "3.0.5",
   "description": "Automatic SDK and Document generator for the NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -40,13 +40,13 @@
     "jsonc-simple-parser": "^2.2.1",
     "nestia-fetcher": "^2.0.1",
     "tgrid": "^0.8.6",
-    "ts-node": "^10.7.0",
-    "tsconfig-paths": "^3.14.1",
+    "ts-node": "10.8.x",
+    "tsconfig-paths": "^4.0.0",
     "tstl": "^2.5.6",
     "ttypescript": "^1.5.13",
-    "typescript": "4.6.x",
-    "typescript-json": "^3.0.6",
-    "typescript-transform-paths": "^3.3.1"
+    "typescript": "4.7.x",
+    "typescript-json": "^3.0.7",
+    "typescript-transform-paths": "3.3.x"
   },
   "devDependencies": {
     "@types/cli": "^0.11.19",
