--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestia",
-  "version": "3.0.5",
+  "version": "3.0.6",
   "description": "Automatic SDK and Document generator for the NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -43,7 +43,7 @@
     "ts-node": "10.8.x",
     "tsconfig-paths": "^4.0.0",
     "tstl": "^2.5.6",
-    "ttypescript": "^1.5.13",
+    "ttypescript": "1.5.x",
     "typescript": "4.7.x",
     "typescript-json": "^3.0.7",
     "typescript-transform-paths": "3.3.x"
