Fix #154 - `tsconfig.json`'s `newLine` to `LF`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -75,7 +75,8 @@
     "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
     "plugins": [
       { "transform": "typescript-json/lib/transform" }
-    ]
+    ],
+    "newLine": "LF",
   },
   "include": ["src"]
 }
