--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "ts-node": "10.8.x",
     "ttypescript": "^1.5.13",
     "typescript": "^4.8.4",
-    "typescript-transform-paths": "^3.3.1",
+    "typescript-transform-paths": "3.3.1",
     "uuid": "^8.3.2"
   },
   "files": [
