--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestia",
-  "version": "3.1.5",
+  "version": "3.1.6",
   "description": "Automatic SDK and Document generator for the NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -37,13 +37,13 @@
     "cli": "^1.0.1",
     "del": "^6.0.0",
     "glob": "^7.2.0",
-    "nestia-fetcher": "^2.0.1",
+    "nestia-fetcher": "^2.0.4",
     "path-to-regexp": "^6.2.1",
     "tgrid": "^0.8.7",
     "tsconfck": "^2.0.1",
     "tsconfig-paths": "^4.0.0",
     "tstl": "^2.5.13",
-    "typescript-json": "^3.3.25"
+    "typescript-json": "^3.3.26"
   },
   "devDependencies": {
     "@types/cli": "^0.11.19",
@@ -61,7 +61,7 @@
     "ts-node": "10.8.x",
     "ttypescript": "^1.5.13",
     "typescript": "^4.8.4",
-    "typescript-transform-paths": "3.3.1",
+    "typescript-transform-paths": "^3.4.4",
     "uuid": "^8.3.2"
   },
   "files": [
