--- a/packages/fetcher/package.json
+++ b/packages/fetcher/package.json
@@ -25,7 +25,7 @@
   "bugs": {
     "url": "https://github.com/samchon/nestia/issues"
   },
-  "homepage": "https://github.com/samchon/nestia/packages/fetcher",
+  "homepage": "https://github.com/samchon/nestia",
   "devDependencies": {
     "@types/node": "^18.11.14",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
