--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@nestia/core",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
+  "bin": {
+    "@nestia/core": "lib/executable/core.js"
+  },
   "scripts": {
     "build": "rimraf lib && tsc",
     "build:test": "rimraf bin && ttsc -p test/tsconfig.json",
@@ -37,6 +40,7 @@
     "@types/express": "^4.17.15",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
+    "comment-json": "^4.2.3",
     "eslint-plugin-deprecation": "^1.3.3",
     "git-last-commit": "^1.0.1",
     "rimraf": "^3.0.2",
