--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestia",
-  "version": "4.0.0-dev.20221217",
+  "version": "4.0.0",
   "description": "Nestia CLI",
   "main": "bin/index.js",
   "bin": {
@@ -14,7 +14,13 @@
     "url": "https://github.com/samchon/nestia"
   },
   "keywords": [
-    "nestia"
+    "nestia",
+    "cli",
+    "sdk",
+    "swagger",
+    "generator",
+    "nestjs",
+    "typia"
   ],
   "author": "Jeongho Nam",
   "license": "MIT",
@@ -23,8 +29,8 @@
   },
   "homepage": "https://github.com/samchon/nestia",
   "devDependencies": {
-    "@nestia/core": "^0.2.1",
-    "@nestia/sdk": "^0.2.0",
+    "@nestia/core": "^1.0.0",
+    "@nestia/sdk": "^1.0.0",
     "@types/node": "^18.11.16",
     "rimraf": "^3.0.2",
     "typescript": "^4.9.4"
