--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestia/core": "^1.0.6",
     "@nestia/sdk": "^1.0.1",
     "@types/node": "^18.11.16",
+    "@types/yamljs": "^0.2.31",
     "rimraf": "^3.0.2",
     "typescript": "^4.9.4"
   },
@@ -40,5 +41,8 @@
     "README.md",
     "LICENSE",
     "package-json"
-  ]
+  ],
+  "dependencies": {
+    "yamljs": "^0.3.0"
+  }
 }
