--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,3 +30,10 @@ jobs:
           npm install
           npm run build
           npm run test
+
+      - name: e2e
+        working-directory: ./packages/e2e
+        run: |
+          npm install
+          npm run build
+          npm run test
