--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -39,16 +39,20 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/express": "^4.17.15",
+    "@types/inquirer": "^9.0.3",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
+    "commander": "^10.0.0",
     "comment-json": "^4.2.3",
     "eslint-plugin-deprecation": "^1.3.3",
     "git-last-commit": "^1.0.1",
+    "inquirer": "^8.2.5",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "tstl": "^2.5.13",
     "ttypescript": "^1.5.15",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
     "@nestia/fetcher": "^1.0.0",
@@ -59,7 +63,7 @@
     "raw-body": "*",
     "reflect-metadata": "*",
     "rxjs": "*",
-    "typia": "^3.4.22"
+    "typia": "^3.5.3"
   },
   "peerDependencies": {
     "ttypescript": ">= 1.5.15",
