--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@nestia/core",
-  "version": "1.0.19",
+  "version": "1.1.0-dev.20230413",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
     "build": "rimraf lib && tsc",
-    "build:test": "rimraf bin && ttsc -p test/tsconfig.json",
+    "build:test": "rimraf bin && tsc -p test/tsconfig.json",
     "dev": "npm run build -- --watch",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
     "package": "npm publish --access public",
+    "prepare": "ts-patch install",
     "prettier": "prettier ./**/*.ts --write",
     "test": "node bin/test"
   },
@@ -44,11 +45,12 @@
     "eslint-plugin-deprecation": "^1.3.3",
     "git-last-commit": "^1.0.1",
     "inquirer": "^8.2.5",
+    "prettier": "^2.8.7",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
+    "ts-patch": "^3.0.0-beta2",
     "tstl": "^2.5.13",
-    "ttypescript": "^1.5.15",
-    "typescript": "^4.9.5",
+    "typescript": "^5.0.4",
     "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
@@ -63,7 +65,7 @@
     "typia": "^3.7.4"
   },
   "peerDependencies": {
-    "typescript": ">= 4.5.2 && < 5.0.0"
+    "typescript": ">= 4.5.2"
   },
   "files": [
     "README.md",
