--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "1.0.19",
+  "version": "1.1.0-dev.20230413",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@nestia/core": "^1.0.17",
     "@nestia/fetcher": "^1.0.1",
+    "@nestia/sdk": "^1.0.10-dev.20230302",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/cli": "^0.11.21",
     "@types/express": "^4.17.15",
