--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -10,7 +10,8 @@
     "dev": "npm run build -- --watch",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
-    "package": "npm publish --access public",
+    "package:latest": "npm publish --access public",
+    "package:next": "npm publish --tag next --access public",
     "prettier": "prettier ./**/*.ts --write",
     "test": "node bin/test"
   },
@@ -52,15 +53,15 @@
     "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
-    "@nestia/fetcher": "^1.0.0",
-    "@nestjs/common": "*",
-    "@nestjs/core": "*",
-    "@nestjs/platform-express": "*",
+    "@nestia/fetcher": "^1.0.1",
+    "@nestjs/common": ">= 7.0.1",
+    "@nestjs/core": ">= 7.0.1",
+    "@nestjs/platform-express": ">= 7.0.1",
     "detect-ts-node": "^1.0.5",
-    "raw-body": "*",
-    "reflect-metadata": "*",
-    "rxjs": "*",
-    "typia": "^3.7.4"
+    "raw-body": ">= 2.0.0",
+    "reflect-metadata": ">= 0.1.12",
+    "rxjs": ">= 6.0.0",
+    "typia": "^3.7.5"
   },
   "peerDependencies": {
     "typescript": ">= 4.5.2 && < 5.0.0"
