--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "1.1.0-dev.20230414",
+  "version": "1.1.0",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -36,7 +36,7 @@
   },
   "homepage": "https://github.com/samchon/nestia",
   "dependencies": {
-    "@nestia/fetcher": "^1.1.0-dev.20230413",
+    "@nestia/fetcher": "^1.1.0",
     "@nestjs/common": ">= 7.0.1",
     "@nestjs/core": ">= 7.0.1",
     "@nestjs/platform-express": ">= 7.0.1",
@@ -44,7 +44,7 @@
     "raw-body": ">= 2.0.0",
     "reflect-metadata": ">= 0.1.12",
     "rxjs": ">= 6.0.0",
-    "typia": "^3.8.0-dev.20230413"
+    "typia": "^3.8.0"
   },
   "peerDependencies": {
     "typescript": ">= 4.5.2"
@@ -63,7 +63,7 @@
     "prettier": "^2.8.7",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
-    "ts-patch": "^3.0.0-beta2",
+    "ts-patch": "^3.0.0",
     "tstl": "^2.5.13",
     "typescript": "^5.0.4",
     "typescript-transform-paths": "^3.4.6"
