--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "1.1.0",
+  "version": "1.1.0-dev.20230420-2",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -36,7 +36,7 @@
   },
   "homepage": "https://github.com/samchon/nestia",
   "dependencies": {
-    "@nestia/fetcher": "^1.1.0",
+    "@nestia/fetcher": "^1.1.0-dev.20230420-2",
     "@nestjs/common": ">= 7.0.1",
     "@nestjs/core": ">= 7.0.1",
     "@nestjs/platform-express": ">= 7.0.1",
@@ -44,7 +44,7 @@
     "raw-body": ">= 2.0.0",
     "reflect-metadata": ">= 0.1.12",
     "rxjs": ">= 6.0.0",
-    "typia": "^3.8.0"
+    "typia": "^3.8.0-dev.20230420-2"
   },
   "peerDependencies": {
     "typescript": ">= 4.5.2"
@@ -57,13 +57,13 @@
     "@typescript-eslint/parser": "^5.46.1",
     "commander": "^10.0.0",
     "comment-json": "^4.2.3",
-    "eslint-plugin-deprecation": "^1.3.3",
+    "eslint-plugin-deprecation": "^1.4.1",
     "git-last-commit": "^1.0.1",
     "inquirer": "^8.2.5",
     "prettier": "^2.8.7",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
-    "ts-patch": "^3.0.0",
+    "ts-patch": "3.0.0-beta3",
     "tstl": "^2.5.13",
     "typescript": "^5.0.4",
     "typescript-transform-paths": "^3.4.6"
