--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "1.1.0",
+  "version": "1.1.0-dev.20230420",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "rimraf lib && tsc",
     "dev": "rimraf lib &&ttsc --watch",
+    "eslint": "eslint ./**/*.ts",
     "package:latest": "npm run build && npm run test && npm publish --access public",
     "package:next": "npm run package:latest -- --tag next",
     "prepare": "ts-patch install",
@@ -42,7 +43,7 @@
     "tsconfck": "^2.0.1",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^2.5.13",
-    "typia": "^3.8.0"
+    "typia": "^3.8.0-dev.20230420-3"
   },
   "peerDependencies": {
     "@nestjs/common": ">= 7.0.1",
@@ -52,8 +53,8 @@
     "typescript": ">= 4.5.2"
   },
   "devDependencies": {
-    "@nestia/core": "^1.1.0",
-    "@nestia/fetcher": "^1.1.0",
+    "@nestia/core": "^1.1.0-dev.20230420",
+    "@nestia/fetcher": "^1.1.0-dev.20230420-2",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/cli": "^0.11.21",
     "@types/express": "^4.17.15",
@@ -64,10 +65,11 @@
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "eslint": "^8.29.0",
+    "eslint-plugin-deprecation": "^1.4.1",
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
-    "ts-patch": "^3.0.0-beta3",
+    "ts-patch": "3.0.0-beta3",
     "typescript": "^5.0.4",
     "typescript-transform-paths": "^3.4.4",
     "uuid": "^9.0.0"
