--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "1.1.0-dev.20230420-2",
+  "version": "1.1.0-dev.20230427-2",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -36,7 +36,7 @@
   },
   "homepage": "https://github.com/samchon/nestia",
   "dependencies": {
-    "@nestia/fetcher": "^1.1.0-dev.20230420-2",
+    "@nestia/fetcher": "^1.1.2",
     "@nestjs/common": ">= 7.0.1",
     "@nestjs/core": ">= 7.0.1",
     "@nestjs/platform-express": ">= 7.0.1",
@@ -44,7 +44,7 @@
     "raw-body": ">= 2.0.0",
     "reflect-metadata": ">= 0.1.12",
     "rxjs": ">= 6.0.0",
-    "typia": "^3.8.0-dev.20230420-2"
+    "typia": "^3.8.1"
   },
   "peerDependencies": {
     "typescript": ">= 4.5.2"
