--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "rimraf bin && tsc",
-    "prettier": "prettier .src/**/*.ts --write"
+    "prettier": "prettier ./src/**/*.ts --write"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@nestia/core": "^1.1.0",
     "@nestia/sdk": "^1.1.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/inquirer": "^9.0.3",
     "@types/node": "^18.11.16",
     "prettier": "^2.8.7",
