--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "1.2.0-dev.20230504-2",
+  "version": "1.2.1",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -52,7 +52,7 @@
     "typescript": ">= 4.5.2"
   },
   "devDependencies": {
-    "@nestia/fetcher": "^1.1.2",
+    "@nestia/fetcher": "^1.2.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/cli": "^0.11.21",
     "@types/express": "^4.17.15",
