--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -33,13 +33,14 @@
   },
   "homepage": "https://github.com/samchon/nestia",
   "dependencies": {
-    "@nestia/fetcher": "^1.2.0",
+    "@nestia/fetcher": "^1.2.1",
     "@nestjs/common": ">= 7.0.1",
     "@nestjs/core": ">= 7.0.1",
     "@nestjs/platform-express": ">= 7.0.1",
     "@nestjs/platform-fastify": ">= 7.0.1",
     "detect-ts-node": "^1.0.5",
     "glob": "^7.2.0",
+    "raw-body": ">= 2.0.0",
     "reflect-metadata": ">= 0.1.12",
     "rxjs": ">= 6.0.0",
     "typia": "^3.8.4"
