--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "1.2.8",
+  "version": "1.2.9",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -53,6 +53,8 @@
   },
   "devDependencies": {
     "@nestia/fetcher": "^1.2.2",
+    "@nestjs/common": ">= 7.0.1",
+    "@nestjs/core": ">= 7.0.1",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/cli": "^0.11.21",
     "@types/express": "^4.17.15",
