Fix github actions bug

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,5 +13,5 @@ jobs:
       - name: test
         working-directory: ./test
         run: |
-          npm install
+          npm run setup
           npm run start
