Upgrade to typia v4
To support #346 issue, `typia` has been entirely reconstructed, and break changes on API being occured.

Therefore, upgraded minor version of `nestia`, and configured `peerDependencies` to have minimum `typia@4.0.0` version

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,4 @@ jobs:
 
       - name: test
         working-directory: ./test
-        run: |
-          npm run setup
-          npm run start
+        run: npm run start
