--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "1.2.4",
+  "version": "1.3.0",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -44,10 +44,19 @@
     "raw-body": ">= 2.0.0",
     "reflect-metadata": ">= 0.1.12",
     "rxjs": ">= 6.0.0",
-    "typia": "^3.8.9"
+    "typia": "^4.0.0"
   },
   "peerDependencies": {
-    "typescript": ">= 4.5.2"
+    "@nestia/fetcher": "^1.2.1",
+    "@nestjs/common": ">= 7.0.1",
+    "@nestjs/core": ">= 7.0.1",
+    "@nestjs/platform-express": ">= 7.0.1",
+    "@nestjs/platform-fastify": ">= 7.0.1",
+    "raw-body": ">= 2.0.0",
+    "reflect-metadata": ">= 0.1.12",
+    "rxjs": ">= 6.0.0",
+    "typescript": ">= 4.5.2",
+    "typia": ">= 4.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
