--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "1.2.10",
+  "version": "1.3.0",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -42,14 +42,15 @@
     "tsconfck": "^2.0.1",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^2.5.13",
-    "typia": "^3.8.9"
+    "typia": "^4.0.0"
   },
   "peerDependencies": {
     "@nestjs/common": ">= 7.0.1",
     "@nestjs/core": ">= 7.0.1",
     "reflect-metadata": ">= 0.1.12",
     "ts-node": ">= 10.6.0",
-    "typescript": ">= 4.5.2"
+    "typescript": ">= 4.5.2",
+    "typia": ">= 4.0.0"
   },
   "devDependencies": {
     "@nestia/fetcher": "^1.2.2",
