--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -35,6 +35,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
+    "@nestia/fetcher": "^1.3.1",
     "cli": "^1.0.1",
     "glob": "^7.2.0",
     "path-to-regexp": "^6.2.1",
@@ -45,6 +46,7 @@
     "typia": "^4.0.3"
   },
   "peerDependencies": {
+    "@nestia/fetcher": ">= 1.3.1",
     "@nestjs/common": ">= 7.0.1",
     "@nestjs/core": ">= 7.0.1",
     "reflect-metadata": ">= 0.1.12",
