--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,7 @@ updates:
     schedule:
       interval: 'daily'
     versioning-strategy: increase
+    open-pull-requests-limit: 25
     allow:
       - dependency-name: "@nestia/fetcher"
       - dependency-name: "typia"
@@ -15,6 +16,7 @@ updates:
     schedule:
       interval: 'daily'
     versioning-strategy: increase
+    open-pull-requests-limit: 25
     allow:
       - dependency-name: "typia"
 #######################################################
@@ -23,6 +25,7 @@ updates:
     schedule:
       interval: 'daily'
     versioning-strategy: increase
+    open-pull-requests-limit: 25
     allow:
       - dependency-name: "@nestia/fetcher"
       - dependency-name: "tgrid"
@@ -34,6 +37,7 @@ updates:
     schedule:
       interval: 'daily'
     versioning-strategy: increase
+    open-pull-requests-limit: 25
     allow:
       - dependency-name: "typia"
 #######################################################
