--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -27,5 +27,8 @@
     "@types/node": "^20.3.1",
     "prettier": "^2.8.8",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "typia": "^4.1.2"
   }
 }
