--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -1,14 +1,20 @@
 {
   "name": "@nestia/migrate",
-  "version": "0.1.0-dev.20230620",
+  "version": "0.1.0",
   "description": "Migration program from swagger to NestJS",
   "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
+  "bin": {
+    "@nestia/migrate": "lib/executable/migrate.js"
+  },
   "scripts": {
-    "test": "node bin/test"
+    "build": "rimraf lib && tsc",
+    "dev": "npm run build -- --watch",
+    "prepare": "ts-patch install && ts-node src/executable/bundle.ts"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/samchon/nestia.git"
+    "url": "https://github.com/samchon/nestia"
   },
   "keywords": [
     "migration",
@@ -24,11 +30,14 @@
   "homepage": "https://github.com/samchon/nestia#readme",
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.3.3",
     "prettier": "^2.8.8",
-    "typescript": "^5.1.3"
+    "rimraf": "^5.0.1",
+    "ts-node": "^10.9.1",
+    "ts-patch": "^3.0.1",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
-    "typia": "^4.1.2"
+    "typia": "^4.1.3"
   }
 }
