--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/migrate",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "Migration program from swagger to NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -39,5 +39,12 @@
   },
   "dependencies": {
     "typia": "^4.1.3"
-  }
+  },
+  "files": [
+    "lib",
+    "src",
+    "package.json",
+    "README.md",
+    "LICENSE"
+  ]
 }
