--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "1.4.10-dev.20230713-2",
+  "version": "1.4.10",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -43,7 +43,7 @@
     "tsconfck": "^2.0.1",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^2.5.13",
-    "typia": "^4.1.4"
+    "typia": "^4.1.6"
   },
   "peerDependencies": {
     "@nestia/fetcher": ">= 1.4.0",
@@ -52,7 +52,7 @@
     "reflect-metadata": ">= 0.1.12",
     "ts-node": ">= 10.6.0",
     "typescript": ">= 4.7.4",
-    "typia": ">= 4.1.4"
+    "typia": ">= 4.1.6"
   },
   "devDependencies": {
     "@nestjs/common": ">= 7.0.1",
