`@nestia/migrate` is not yet

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,9 +10,9 @@ jobs:
         with:
           node-version: 16.x
 
-      - name: test migrate
-        working-directory: ./packages/migrate
-        run: npm install && npm run build && npm run test
+      # - name: test migrate
+      #   working-directory: ./packages/migrate
+      #   run: npm install && npm run build && npm run test
 
       - name: test entire
         working-directory: ./test
