--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/core": "^1.6.3",
+    "@nestia/core": "^1.6.4-dev.20230816",
     "typia": "^4.2.1"
   },
   "devDependencies": {
