--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -36,8 +36,8 @@
     "inquirer": "^8.2.5"
   },
   "devDependencies": {
-    "@nestia/core": "^1.6.3",
-    "@nestia/sdk": "^1.6.3",
+    "@nestia/core": "^1.6.4-dev.20230816",
+    "@nestia/sdk": "^1.6.4-dev.20230816",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/inquirer": "^9.0.3",
     "@types/node": "^18.11.16",
