Fix samchon/typia#811 - bug of `validateEquals` on `@TypedBody`
When validator function of `@TypedBody` being configured to `validateEquals`, it has failed validation and always returned 400 bad request error, even when valid type comes.

Fixed that bug.

--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -24,8 +24,8 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/core": "^2.0.4",
-    "typia": "^5.0.4"
+    "@nestia/core": "^2.0.5-dev.20230921",
+    "typia": "^5.0.5"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
